# try-formura

./: .gitignore  README.md
IDO-fmr/: Makefile  batch  ido-main.cpp  ido.fmr  ido.yaml  run
burgers-fmr/: Makefile  burgers1-main.cpp  burgers1.fmr  burgers1.txt  burgers1.yaml  run
normal-4th-order-fmr/: Makefile  README.md  check_derivative.hs  gauss.c  gauss.h  normal-4th-main.cpp  normal-4th.fmr  normal-4th.yaml  run  run-100-1000  run-all  shock.c  shock.h  simple-4th-main.cpp  simple-4th.fmr  simple-4th.yaml  sin.c  sin.h  tmp-normal-4th-main.cpp  tmp-normal-4th.fmr
pearson/: pearson-main.cpp
pearson-fmr/: pearson.yaml
shocktube/: Makefile  shocktube-main.cpp  shocktube.fmr
shocktube-fmr/: Makefile  README.md  shocktube-lax-wendroff.fmr  shocktube-maccormack.fmr  shocktube-main.cpp  shocktube.fmr  shocktube.yaml
shocktube-hs/: README.md  mk-img  plot  shocktube-hs.cabal
sode1-fmr/: .gitignore  Makefile  Makefile2  check_conservation.hs  check_derivative.hs  gauss.c  gauss.h  plot-vortex  run  run-all  sin.c  sin.h  sin2.c  sin2.h  sode1-2-main.cpp  sode1-2.fmr  sode1-2.yaml  sode1-3-main.cpp  sode1-3.fmr  sode1-3.yaml  sode1-main.cpp  sode1.fmr  sode1.yaml  vortex.c  vortex.h
sode1-fmr/shocktube1/: .gitignore  CMakeLists.txt  Makefile  batch  calc_viscosity.hs  euler1-main.cpp  euler1-with-r_u_p.txt  euler1-with-viscosity.txt  euler1.fmr  euler1.yaml  run  shocktube.c  shocktube.h  shocktube.h.org  sode1-1-main.cpp  sode1-1-with-vis.fmr  sode1-1.fmr  sode1-1.fmr.org  sode1-1.yaml
wave-fmr/: README.md  ftcs-main.cpp  ftcs.fmr  ftcs.yaml  lax.fmr  (+12 more)
(+21 files in other folders)
